Nasty bug fixed inside SDL_image - the colorkey was not set in SDL 1.2 because of SDL 1.3 changes Also updated Biniax2

--- a/project/jni/application/biniax2/AndroidAppSettings.cfg
+++ b/project/jni/application/biniax2/AndroidAppSettings.cfg
@@ -16,22 +16,22 @@ SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
 CompatibilityHacksStaticInit=n
 CompatibilityHacksTextInputEmulatesHwKeyboard=n
-AppUsesMouse=n
+AppUsesMouse=y
 AppNeedsTwoButtonMouse=n
 ShowMouseCursor=n
 ForceRelativeMouseMode=n
-AppNeedsArrowKeys=y
+AppNeedsArrowKeys=n
 AppNeedsTextInput=n
 AppUsesJoystick=n
 AppUsesAccelerometer=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="RETURN"
-AppTouchscreenKeyboardKeysAmount=2
+AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="RETURN SPACE"
 StartupMenuButtonTimeout=0
-HiddenMenuOptions=''
+HiddenMenuOptions='DisplaySizeConfig'
 FirstStartMenuOptions=''
 MultiABI=n
 AppVersionCode=1301
