Updated Biniax2 and translations

--- a/project/jni/application/biniax2/AndroidAppSettings.cfg
+++ b/project/jni/application/biniax2/AndroidAppSettings.cfg
@@ -4,8 +4,8 @@ LibSdlVersion=1.2
 AppName="Biniax2"
 AppFullName=com.biniax.sdl
 ScreenOrientation=h
-InhibitSuspend=n
-AppDataDownloadUrl="!Game data|data.zip"
+InhibitSuspend=y
+AppDataDownloadUrl="!Game data|data3.zip"
 VideoDepthBpp=16
 NeedDepthBuffer=n
 NeedStencilBuffer=n
@@ -30,12 +30,12 @@ RedefinedKeys="RETURN"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="RETURN SPACE"
-StartupMenuButtonTimeout=0
-HiddenMenuOptions='DisplaySizeConfig'
-FirstStartMenuOptions=''
+StartupMenuButtonTimeout=1000
+HiddenMenuOptions='DisplaySizeConfig MouseConfigMainMenu'
+FirstStartMenuOptions='new Settings.VideoSettingsConfig()'
 MultiABI=n
-AppVersionCode=1301
-AppVersionName="1.3.01"
+AppVersionCode=1401
+AppVersionName="1.4.01"
 ResetSdlConfigForThisVersion=n
 DeleteFilesOnUpgrade="%"
 CompiledLibraries="sdl_image sdl_mixer"
