Texture linear filtering is enabled by default, tiny tweak to Biniax2

--- a/project/jni/application/biniax2/AndroidAppSettings.cfg
+++ b/project/jni/application/biniax2/AndroidAppSettings.cfg
@@ -30,9 +30,9 @@ RedefinedKeys="RETURN"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="RETURN SPACE"
-StartupMenuButtonTimeout=1000
+StartupMenuButtonTimeout=0
 HiddenMenuOptions='DisplaySizeConfig MouseConfigMainMenu'
-FirstStartMenuOptions='new Settings.VideoSettingsConfig()'
+FirstStartMenuOptions=''
 MultiABI=n
 AppVersionCode=1401
 AppVersionName="1.4.01"
