Toggled back mouse events ratelimiting, changed magnifying glass grag&drop to be more snappy, updated OpenTTD

--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -23,7 +23,7 @@ ForceRelativeMouseMode=n
 AppNeedsArrowKeys=n
 AppNeedsTextInput=y
 AppUsesJoystick=n
-AppHandlesJoystickSensitivity=n
+AppUsesAccelerometer=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="LALT RETURN NO_REMAP NO_REMAP SPACE DELETE"
@@ -34,16 +34,16 @@ StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig'
 FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=12220
-AppVersionName="1.2.2.20"
-ResetSdlConfigForThisVersion=n
-DeleteFilesOnUpgrade="%"
+AppVersionCode=12221
+AppVersionName="1.2.2.21"
+ResetSdlConfigForThisVersion=y
+DeleteFilesOnUpgrade=".openttd/openttd.cfg"
 CompiledLibraries="jpeg png freetype timidity lzma lzo2"
 CustomBuildScript=y
 AppCflags=''
 AppLdflags=''
 AppSubdirsBuild=''
-AppCmdline='openttd'
+AppCmdline='openttd -b 32bpp-anim'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
 MinimumScreenSize=s
 AdmobPublisherId=n
