--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="OpenArena"
 AppFullName=ws.openarena.sdl
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="Game data|http://sourceforge.net/projects/libsdl-android/files/OpenArena/oa-0.8.8-1.zip/download"
+AppDataDownloadUrl="!Game data|http://sourceforge.net/projects/libsdl-android/files/OpenArena/oa-0.8.8-1.zip/download^!Game logic|:baseoa/pak7-android.pk3:vm.zip"
 VideoDepthBpp=24
 NeedDepthBuffer=y
 NeedStencilBuffer=y
@@ -22,8 +22,8 @@ ShowMouseCursor=n
 ForceRelativeMouseMode=n
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
-AppUsesJoystick=n
-AppHandlesJoystickSensitivity=n
+AppUsesJoystick=y
+AppUsesAccelerometer=y
 AppUsesMultitouch=y
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
@@ -33,7 +33,7 @@ RedefinedKeysScreenKb="0 1 2 3 4 5 6 7 8 9"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
 FirstStartMenuOptions=''
-MultiABI=n
+MultiABI=y
 AppVersionCode=08803
 AppVersionName="0.8.8.03"
 ResetSdlConfigForThisVersion=n
