Fixed colorkey and alpha in HW mode when restoring from background - patch by SLVN

--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -16,14 +16,14 @@ SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
 CompatibilityHacksStaticInit=n
 CompatibilityHacksTextInputEmulatesHwKeyboard=n
-AppUsesMouse=y
+AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
 ShowMouseCursor=n
 ForceRelativeMouseMode=n
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
-AppUsesJoystick=n
-AppHandlesJoystickSensitivity=n
+AppUsesJoystick=y
+AppUsesAccelerometer=y
 AppUsesMultitouch=y
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
