--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -20,7 +20,7 @@ AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
 ShowMouseCursor=n
 ForceRelativeMouseMode=n
-AppNeedsArrowKeys=y
+AppNeedsArrowKeys=n
 AppNeedsTextInput=y
 AppUsesJoystick=y
 AppUsesAccelerometer=y
@@ -33,11 +33,11 @@ RedefinedKeysScreenKb="0 1 2 3 4 5 6 7 8 9"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
 FirstStartMenuOptions=''
-MultiABI=y
-AppVersionCode=08803
+MultiABI=n
+AppVersionCode=0880301
 AppVersionName="0.8.8.03"
 ResetSdlConfigForThisVersion=n
-DeleteFilesOnUpgrade="%"
+DeleteFilesOnUpgrade="libsdl-DownloadFinished-1.flag"
 CompiledLibraries="sdl_mixer sdl_image freetype curl vorbis ogg"
 CustomBuildScript=y
 AppCflags='-O2 -finline-functions'
