--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="OpenTTD"
 AppFullName=org.openttd.sdl
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="!Data files - 20 Mb|openttd-data-1.2.2.zip|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-1.2.2.zip^!MIDI music support (18 Mb)|timidity.zip|http://sourceforge.net/projects/libsdl-android/files/timidity.zip"
+AppDataDownloadUrl="!Data files - 20 Mb|openttd-data-1.2.2.zip|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-1.2.2.zip^!MIDI music support (18 Mb)|timidity.zip|http://sourceforge.net/projects/libsdl-android/files/timidity.zip^!Config file|:.openttd/openttd.cfg:openttd-1.2.2.22.cfg"
 VideoDepthBpp=16
 NeedDepthBuffer=n
 NeedStencilBuffer=n
@@ -36,7 +36,7 @@ FirstStartMenuOptions=''
 MultiABI=n
 AppVersionCode=12222
 AppVersionName="1.2.2.22"
-ResetSdlConfigForThisVersion=n
+ResetSdlConfigForThisVersion=y
 DeleteFilesOnUpgrade=".openttd/openttd.cfg"
 CompiledLibraries="jpeg png freetype timidity lzma lzo2"
 CustomBuildScript=y
