--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "project/jni/application/openarena/vm"]
 	path = project/jni/application/openarena/vm
 	url = https://github.com/pelya/openarena-vm
+[submodule "project/jni/application/teeworlds-0.7/src"]
+	path = project/jni/application/teeworlds-0.7/src
+	url = git://github.com/pelya/teeworlds.git
