Special hack for TeeWorlds

--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -21,13 +21,13 @@ AppNeedsTwoButtonMouse=n
 ShowMouseCursor=n
 ForceRelativeMouseMode=n
 AppNeedsArrowKeys=y
-AppNeedsTextInput=y
-AppUsesJoystick=y
+AppNeedsTextInput=n
+AppUsesJoystick=n
 AppUsesAccelerometer=y
-AppUsesMultitouch=y
-NonBlockingSwapBuffers=n
-RedefinedKeys="SPACE RETURN LEFT RIGHT LSHIFT ESCAPE RSHIFT LSHIFT"
-AppTouchscreenKeyboardKeysAmount=6
+AppUsesMultitouch=n
+NonBlockingSwapBuffers=y
+RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP"
+AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="SPACE RETURN LEFT RIGHT RSHIFT LSHIFT"
 StartupMenuButtonTimeout=3000
@@ -37,7 +37,7 @@ MultiABI=n
 AppVersionCode=06108
 AppVersionName="0.6.1.08"
 ResetSdlConfigForThisVersion=y
-DeleteFilesOnUpgrade="data"
+DeleteFilesOnUpgrade="data .teeworlds"
 CompiledLibraries="sdl_image freetype glu"
 CustomBuildScript=n
 AppCflags='-O3'
