Moved some files around between SDL 1.2 and 1.3

--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -20,12 +20,12 @@ AppUsesMouse=y
 AppNeedsTwoButtonMouse=n
 ShowMouseCursor=n
 ForceRelativeMouseMode=n
-AppNeedsArrowKeys=y
+AppNeedsArrowKeys=n
 AppNeedsTextInput=n
-AppUsesJoystick=n
+AppUsesJoystick=y
 AppUsesAccelerometer=y
 AppUsesMultitouch=n
-NonBlockingSwapBuffers=y
+NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP"
 AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=0
