Setting some env variables like app path and display physical size

--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -20,7 +20,7 @@ AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
 ShowMouseCursor=n
 ForceRelativeMouseMode=n
-AppNeedsArrowKeys=n
+AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=y
 AppUsesAccelerometer=y
@@ -33,10 +33,10 @@ RedefinedKeysScreenKb="0 1 2 3 4 5 6 7 8 9"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
 FirstStartMenuOptions=''
-MultiABI=n
-AppVersionCode=0880301
+MultiABI=y
+AppVersionCode=08803
 AppVersionName="0.8.8.03"
-ResetSdlConfigForThisVersion=n
+ResetSdlConfigForThisVersion=y
 DeleteFilesOnUpgrade="libsdl-DownloadFinished-1.flag"
 CompiledLibraries="sdl_mixer sdl_image freetype curl vorbis ogg"
 CustomBuildScript=y
@@ -46,6 +46,6 @@ AppSubdirsBuild=''
 AppCmdline=''
 ReadmeText='^Readme text'
 MinimumScreenSize=n
-AdmobPublisherId=a14fe4dd0ebe974
+AdmobPublisherId=n #a14fe4dd0ebe974
 AdmobTestDeviceId=66133194946FB6C1CD0ED2EFCCB82539
 AdmobBannerSize=BANNER
