--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="OpenTTD"
 AppFullName=org.openttd.sdl
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="!Data files - 20 Mb|openttd-data-1.2.2.zip|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-1.2.2.zip^!MIDI music support (18 Mb)|timidity.zip|http://sourceforge.net/projects/libsdl-android/files/timidity.zip^!Config file|:.openttd/openttd.cfg:openttd-1.2.2.22.cfg"
+AppDataDownloadUrl="!Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-1.2.3.zip^!MIDI music support (18 Mb)|timidity.zip|http://sourceforge.net/projects/libsdl-android/files/timidity.zip^!Config file|:.openttd/openttd.cfg:openttd-1.2.2.22.cfg"
 VideoDepthBpp=24
 NeedDepthBuffer=n
 NeedStencilBuffer=n
@@ -16,6 +16,7 @@ SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
 CompatibilityHacksStaticInit=n
 CompatibilityHacksTextInputEmulatesHwKeyboard=n
+CompatibilityHacksPreventAudioChopping=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 ShowMouseCursor=n
@@ -34,8 +35,9 @@ StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig'
 FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=12222
-AppVersionName="1.2.2.22"
+AppMinimumRAM=0
+AppVersionCode=12322
+AppVersionName="1.2.3.22"
 ResetSdlConfigForThisVersion=y
 DeleteFilesOnUpgrade=".openttd/openttd.cfg"
 CompiledLibraries="jpeg png freetype timidity lzma lzo2"
