--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -36,10 +36,10 @@ HiddenMenuOptions='OptionalDownloadConfig'
 FirstStartMenuOptions=''
 MultiABI=n
 AppMinimumRAM=0
-AppVersionCode=12322
-AppVersionName="1.2.3.22"
-ResetSdlConfigForThisVersion=y
-DeleteFilesOnUpgrade=".openttd/openttd.cfg"
+AppVersionCode=12323
+AppVersionName="1.2.3.23"
+ResetSdlConfigForThisVersion=n
+DeleteFilesOnUpgrade="%"
 CompiledLibraries="jpeg png freetype timidity lzma lzo2"
 CustomBuildScript=y
 AppCflags=''
