Updated OpenGL test app

--- a/project/jni/application/test-opengl/AndroidAppSettings.cfg
+++ b/project/jni/application/test-opengl/AndroidAppSettings.cfg
@@ -1,34 +1,53 @@
 # The application settings for Android libSDL port
-AppSettingVersion=16
+AppSettingVersion=17
 LibSdlVersion=1.2
 AppName="OpenGL SDL test"
 AppFullName=org.opengl.sdl.test
 ScreenOrientation=h
 InhibitSuspend=n
 AppDataDownloadUrl="Gamedata|data2.zip"
+VideoDepthBpp=24
+NeedDepthBuffer=y
+NeedStencilBuffer=n
+NeedGles2=n
+SwVideoMode=n
 SdlVideoResize=n
 SdlVideoResizeKeepAspect=n
-NeedDepthBuffer=y
-AppUsesMouse=n
+CompatibilityHacks=n
+CompatibilityHacksStaticInit=n
+CompatibilityHacksTextInputEmulatesHwKeyboard=n
+CompatibilityHacksPreventAudioChopping=n
+AppUsesMouse=y
 AppNeedsTwoButtonMouse=n
+ShowMouseCursor=n
+ForceRelativeMouseMode=n
 AppNeedsArrowKeys=n
 AppNeedsTextInput=n
 AppUsesJoystick=n
-AppHandlesJoystickSensitivity=n
+AppUsesAccelerometer=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="RETURN"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="RETURN"
+StartupMenuButtonTimeout=0
+HiddenMenuOptions=''
+FirstStartMenuOptions=''
 MultiABI=n
+AppMinimumRAM=0
 AppVersionCode=1
 AppVersionName="1"
+ResetSdlConfigForThisVersion=n
+DeleteFilesOnUpgrade="n"
 CompiledLibraries="sdl_image"
 CustomBuildScript=n
 AppCflags='-finline-functions -O2'
 AppLdflags=''
 AppSubdirsBuild=''
-AppUseCrystaXToolchain=n
 AppCmdline=''
 ReadmeText='^text'
+MinimumScreenSize=s
+AdmobPublisherId=n
+AdmobTestDeviceId=
+AdmobBannerSize=
