--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -16,6 +16,7 @@ SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
 CompatibilityHacksStaticInit=n
 CompatibilityHacksTextInputEmulatesHwKeyboard=n
+CompatibilityHacksPreventAudioChopping=n
 AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
 ShowMouseCursor=n
@@ -23,7 +24,7 @@ ForceRelativeMouseMode=n
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=n
-AppHandlesJoystickSensitivity=n
+AppUsesAccelerometer=y
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="LCTRL LALT NO_REMAP NO_REMAP RETURN ESCAPE"
@@ -34,14 +35,19 @@ StartupMenuButtonTimeout=3000
 HiddenMenuOptions=''
 FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=40012
-AppVersionName="0.4.0.12"
+AppMinimumRAM=32
+AppVersionCode=100000
+AppVersionName="1.0 RC-1"
 ResetSdlConfigForThisVersion=n
 DeleteFilesOnUpgrade="%"
 CompiledLibraries="tremor ogg"
 CustomBuildScript=n
-AppCflags='-frtti -fexceptions -finline-functions -O2 -DTREMOR=1 -DBUILD_TYPE=LINUX32 -DTARGET_LNX=1 -Werror=strict-aliasing -Werror=cast-align -Werror=pointer-arith -Werror=address'
+AppCflags='-frtti -fexceptions -finline-functions -O2 -DTREMOR=1 -DBUILD_TYPE=LINUX32 -DTARGET_LNX=1 -Werror=strict-aliasing -Werror=cast-align -Werror=pointer-arith -Werror=address -std=c++11'
 AppLdflags='-ltremor'
 AppSubdirsBuild='commandergenius/src/*'
 AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
+MinimumScreenSize=s
+AdmobPublisherId=n
+AdmobTestDeviceId=
+AdmobBannerSize=
