--- a/project/jni/application/prefclub/AndroidAppSettings.cfg
+++ b/project/jni/application/prefclub/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="PrefClub"
 AppFullName=org.prefclub
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="!Prefclub game|prefclub.zip"
+AppDataDownloadUrl="!Prefclub game|prefclub2.zip"
 VideoDepthBpp=16
 NeedDepthBuffer=n
 NeedStencilBuffer=n
@@ -14,13 +14,17 @@ SwVideoMode=y
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
+CompatibilityHacksStaticInit=n
+CompatibilityHacksTextInputEmulatesHwKeyboard=n
+CompatibilityHacksPreventAudioChopping=n
 AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
+ShowMouseCursor=n
 ForceRelativeMouseMode=n
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=n
-AppHandlesJoystickSensitivity=n
+AppUsesAccelerometer=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP RETURN ESCAPE F5 F6 F7 F8"
@@ -29,10 +33,13 @@ AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="RETURN LSHIFT LCTRL LALT"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig'
-FirstStartMenuOptions=''
+FirstStartMenuOptions='new Settings.ShowReadme()'
 MultiABI=n
-AppVersionCode=07404
-AppVersionName="0.74.04"
+AppMinimumRAM=0
+AppVersionCode=07405
+AppVersionName="0.74.05"
+ResetSdlConfigForThisVersion=y
+DeleteFilesOnUpgrade="prefclub"
 CompiledLibraries="jpeg png sdl_mixer sdl_net sdl_sound"
 CustomBuildScript=y
 AppCflags=''
@@ -40,3 +47,7 @@ AppLdflags=''
 AppSubdirsBuild=''
 AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
+MinimumScreenSize=s
+AdmobPublisherId=n
+AdmobTestDeviceId=
+AdmobBannerSize=
