--- a/project/jni/application/prefclub/AndroidAppSettings.cfg
+++ b/project/jni/application/prefclub/AndroidAppSettings.cfg
@@ -40,13 +40,13 @@ AppVersionCode=07405
 AppVersionName="0.74.05"
 ResetSdlConfigForThisVersion=y
 DeleteFilesOnUpgrade="prefclub"
-CompiledLibraries="jpeg png sdl_mixer sdl_net sdl_sound"
+CompiledLibraries="jpeg png sdl_net"
 CustomBuildScript=y
 AppCflags=''
 AppLdflags=''
 AppSubdirsBuild=''
-AppCmdline=''
-ReadmeText='^You may press "Home" now - the data will be downloaded in background'
+AppCmdline='dosbox -conf .dosbox/dosbox-0.74.conf'
+ReadmeText='Touch upper-left corner to type your name or tip amount^ru:Нажмите левый верхний угол экрана, чтобы ввести своё имя или размер чаевых'
 MinimumScreenSize=s
 AdmobPublisherId=n
 AdmobTestDeviceId=
