--- a/project/jni/application/dosbox/AndroidAppSettings.cfg
+++ b/project/jni/application/dosbox/AndroidAppSettings.cfg
@@ -1,34 +1,53 @@
 # The application settings for Android libSDL port
-AppSettingVersion=16
+AppSettingVersion=17
 LibSdlVersion=1.2
 AppName="DosBox"
 AppFullName=com.dosbox.sdl
 ScreenOrientation=h
 InhibitSuspend=y
 AppDataDownloadUrl="Data size is 1 Mb|dosbox-data.zip"
+VideoDepthBpp=16
+NeedDepthBuffer=n
+NeedStencilBuffer=n
+NeedGles2=n
+SwVideoMode=y
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
-NeedDepthBuffer=n
+CompatibilityHacks=n
+CompatibilityHacksStaticInit=n
+CompatibilityHacksTextInputEmulatesHwKeyboard=n
+CompatibilityHacksPreventAudioChopping=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
-AppNeedsArrowKeys=n
+ShowMouseCursor=n
+ForceRelativeMouseMode=n
+AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=n
-AppHandlesJoystickSensitivity=n
+AppUsesAccelerometer=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="SPACE RETURN PLUS MINUS F11 ESCAPE F5 F6 F7 F8"
-AppTouchscreenKeyboardKeysAmount=4
+RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP RETURN ESCAPE"
+AppTouchscreenKeyboardKeysAmount=1
 AppTouchscreenKeyboardKeysAmountAutoFire=0
-RedefinedKeysScreenKb="F11 F12 F9 F10"
+RedefinedKeysScreenKb="RETURN"
+StartupMenuButtonTimeout=3000
+HiddenMenuOptions='OptionalDownloadConfig'
+FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=07402
-AppVersionName="0.74.02"
+AppMinimumRAM=0
+AppVersionCode=07403
+AppVersionName="0.74.03"
+ResetSdlConfigForThisVersion=y
+DeleteFilesOnUpgrade="%"
 CompiledLibraries="jpeg png sdl_mixer sdl_net sdl_sound"
 CustomBuildScript=y
 AppCflags=''
 AppLdflags=''
 AppSubdirsBuild=''
-AppUseCrystaXToolchain=n
-AppCmdline=''
+AppCmdline='dosbox'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
+MinimumScreenSize=s
+AdmobPublisherId=n
+AdmobTestDeviceId=
+AdmobBannerSize=
