--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -5,8 +5,8 @@ AppName="OpenTTD"
 AppFullName=org.openttd.sdl
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="!Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-1.2.3.zip^!MIDI music support (18 Mb)|timidity.zip|http://sourceforge.net/projects/libsdl-android/files/timidity.zip^!Config file|:.openttd/openttd.cfg:openttd-1.2.2.22.cfg"
-VideoDepthBpp=24
+AppDataDownloadUrl="!Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-1.2.3.zip^!MIDI music support (18 Mb)|timidity.zip|http://sourceforge.net/projects/libsdl-android/files/timidity.zip^!Config file|:.openttd/openttd.cfg:openttd-1.2.3.24.cfg"
+VideoDepthBpp=16
 NeedDepthBuffer=n
 NeedStencilBuffer=n
 NeedGles2=n
@@ -36,16 +36,16 @@ HiddenMenuOptions='OptionalDownloadConfig'
 FirstStartMenuOptions=''
 MultiABI=n
 AppMinimumRAM=0
-AppVersionCode=12323
-AppVersionName="1.2.3.23"
-ResetSdlConfigForThisVersion=n
+AppVersionCode=12324
+AppVersionName="1.2.3.24"
+ResetSdlConfigForThisVersion=y
 DeleteFilesOnUpgrade="%"
 CompiledLibraries="jpeg png freetype timidity lzma lzo2"
 CustomBuildScript=y
 AppCflags=''
 AppLdflags=''
 AppSubdirsBuild=''
-AppCmdline='openttd -b 32bpp-anim'
+AppCmdline='openttd'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
 MinimumScreenSize=s
 AdmobPublisherId=n
