--- a/project/jni/application/openttd/AndroidData/openttd-1.2.3.24.cfg
+++ b/project/jni/application/openttd/AndroidData/openttd-1.2.3.24.cfg
@@ -1,10 +1,10 @@
 
 [misc]
-resolution = 800,480
-small_font = fonts/FreeSans.ttf
-medium_font = fonts/FreeSerif.ttf
-large_font = fonts/FreeSerif.ttf
-mono_font = fonts/FreeMono.ttf
+resolution = 640,480
+small_font = 
+medium_font = 
+large_font = 
+mono_font = 
 small_size = 10
 medium_size = 12
 large_size = 16
