Updated OpenArena project

--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -30,7 +30,7 @@ NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
-RedefinedKeysScreenKb="0 1 2 3 4 5 6 7 8 9"
+RedefinedKeysScreenKb="UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
 FirstStartMenuOptions=''
