--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -17,6 +17,7 @@ CompatibilityHacks=n
 CompatibilityHacksStaticInit=n
 CompatibilityHacksTextInputEmulatesHwKeyboard=n
 CompatibilityHacksPreventAudioChopping=n
+CompatibilityHacksAppIgnoresAudioBufferSize=n
 AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
 ShowMouseCursor=n
