Script for creating .tar.gz source archive, with whole SDL repo plus app sources

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ project/src
 project/res/values*
 project/AndroidManifest.xml
 project/jni/Settings.mk
-libapplication.so
+project/jni/application/*/libapplication*.so
 project/jni/application/src
