--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -17,6 +17,7 @@ CompatibilityHacks=n
 CompatibilityHacksStaticInit=n
 CompatibilityHacksTextInputEmulatesHwKeyboard=y
 CompatibilityHacksPreventAudioChopping=n
+CompatibilityHacksAppIgnoresAudioBufferSize=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 ShowMouseCursor=n
