Added another video mode for UAE4ALL2

--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -29,9 +29,9 @@ AppUsesAccelerometer=y
 AppUsesMultitouch=y
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
-AppTouchscreenKeyboardKeysAmount=0
+AppTouchscreenKeyboardKeysAmount=1
 AppTouchscreenKeyboardKeysAmountAutoFire=0
-RedefinedKeysScreenKb="UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN"
+RedefinedKeysScreenKb="SLASH UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
 FirstStartMenuOptions=''
