--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -25,22 +25,22 @@ ForceRelativeMouseMode=n
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=y
-AppUsesAccelerometer=y
+AppUsesAccelerometer=n
 AppUsesMultitouch=y
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
 AppTouchscreenKeyboardKeysAmount=3
 AppTouchscreenKeyboardKeysAmountAutoFire=0
-RedefinedKeysScreenKb="SLASH BACKSPACE TAB RETURN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN"
+RedefinedKeysScreenKb="SLASH BACKSPACE TAB LEFT RIGHT RETURN UNKNOWN UNKNOWN UNKNOWN UNKNOWN"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
 FirstStartMenuOptions=''
 MultiABI=y
 AppMinimumRAM=350
-AppVersionCode=08804
-AppVersionName="0.8.8.04"
+AppVersionCode=08805
+AppVersionName="0.8.8.05"
 ResetSdlConfigForThisVersion=y
-DeleteFilesOnUpgrade="libsdl-DownloadFinished-10.flag"
+DeleteFilesOnUpgrade="libsdl-DownloadFinished-10.flag .openarena/baseoa/q3config.cfg"
 CompiledLibraries="sdl_mixer sdl_image freetype curl vorbis ogg"
 CustomBuildScript=y
 AppCflags='-O2 -finline-functions'
