--- a/project/jni/application/pachi/AndroidAppSettings.cfg
+++ b/project/jni/application/pachi/AndroidAppSettings.cfg
@@ -1,34 +1,54 @@
 # The application settings for Android libSDL port
-AppSettingVersion=16
+AppSettingVersion=17
 LibSdlVersion=1.2
 AppName="Pachi el marciano"
 AppFullName=net.sourceforge.dragontech.pachi
 ScreenOrientation=h
 InhibitSuspend=n
 AppDataDownloadUrl="Game data is 30 Mb|http://sourceforge.net/projects/libsdl-android/files/Pachi/pachi.zip/download"
+VideoDepthBpp=16
+NeedDepthBuffer=n
+NeedStencilBuffer=n
+NeedGles2=n
+SwVideoMode=y
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
-NeedDepthBuffer=n
+CompatibilityHacks=n
+CompatibilityHacksStaticInit=n
+CompatibilityHacksTextInputEmulatesHwKeyboard=n
+CompatibilityHacksPreventAudioChopping=n
+CompatibilityHacksAppIgnoresAudioBufferSize=n
 AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
+ShowMouseCursor=n
+ForceRelativeMouseMode=n
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=n
-AppHandlesJoystickSensitivity=n
+AppUsesAccelerometer=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN"
 AppTouchscreenKeyboardKeysAmount=1
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="SPACE RETURN"
+StartupMenuButtonTimeout=3000
+HiddenMenuOptions=''
+FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=104
-AppVersionName="1.04"
+AppMinimumRAM=0
+AppVersionCode=106
+AppVersionName="1.06"
+ResetSdlConfigForThisVersion=y
+DeleteFilesOnUpgrade="%"
 CompiledLibraries="sdl_mixer"
 CustomBuildScript=n
 AppCflags='-O2 -finline-functions -Wno-write-strings'
 AppLdflags=''
 AppSubdirsBuild=''
-AppUseCrystaXToolchain=n
 AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
+MinimumScreenSize=n
+AdmobPublisherId=n
+AdmobTestDeviceId=
+AdmobBannerSize=
