--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -29,16 +29,16 @@ AppUsesAccelerometer=n
 AppUsesMultitouch=y
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
-AppTouchscreenKeyboardKeysAmount=3
+AppTouchscreenKeyboardKeysAmount=5
 AppTouchscreenKeyboardKeysAmountAutoFire=0
-RedefinedKeysScreenKb="SLASH BACKSPACE TAB END LEFT RIGHT UNKNOWN UNKNOWN UNKNOWN UNKNOWN"
+RedefinedKeysScreenKb="SLASH BACKSPACE TAB END LCTRL SPACE UNKNOWN UNKNOWN UNKNOWN UNKNOWN"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
 FirstStartMenuOptions=''
 MultiABI=y
 AppMinimumRAM=350
-AppVersionCode=08810
-AppVersionName="0.8.8.10"
+AppVersionCode=08811
+AppVersionName="0.8.8.11"
 ResetSdlConfigForThisVersion=y
 DeleteFilesOnUpgrade="libsdl-DownloadFinished-10.flag .openarena/baseoa/q3config.cfg"
 CompiledLibraries="sdl_mixer sdl_image freetype curl vorbis ogg"
