Commander Genius Update to Release 1.0

--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -17,6 +17,7 @@ CompatibilityHacks=n
 CompatibilityHacksStaticInit=n
 CompatibilityHacksTextInputEmulatesHwKeyboard=n
 CompatibilityHacksPreventAudioChopping=n
+CompatibilityHacksAppIgnoresAudioBufferSize=
 AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
 ShowMouseCursor=n
@@ -36,8 +37,8 @@ HiddenMenuOptions=''
 FirstStartMenuOptions=''
 MultiABI=n
 AppMinimumRAM=32
-AppVersionCode=100002
-AppVersionName="1.0 RC-3"
+AppVersionCode=100003
+AppVersionName="1.0 RC-4"
 ResetSdlConfigForThisVersion=n
 DeleteFilesOnUpgrade="%"
 CompiledLibraries="tremor ogg"
