--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="Commander Genius"
 AppFullName=net.sourceforge.clonekeenplus
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="!Game data|data2.zip^High-quality GFX and music - 40 Mb|http://sourceforge.net/projects/libsdl-android/files/CommanderGenius/commandergenius-hqp-1.8.zip/download"
+AppDataDownloadUrl="!Keen 1|keen1.zip^Keen 4|keen4.zip^Keen 7|keen7.zip^High-quality GFX and music - 50 Mb|http://sourceforge.net/projects/clonekeenplus/files/High%20Quality%20Packs/Version%201.x/hqp19.zip/download"
 VideoDepthBpp=24
 NeedDepthBuffer=n
 NeedStencilBuffer=n
@@ -37,8 +37,8 @@ HiddenMenuOptions=''
 FirstStartMenuOptions=''
 MultiABI=n
 AppMinimumRAM=32
-AppVersionCode=100003
-AppVersionName="1.0 RC-4"
+AppVersionCode=100010
+AppVersionName="1.0 Release"
 ResetSdlConfigForThisVersion=n
 DeleteFilesOnUpgrade="%"
 CompiledLibraries="tremor ogg"
