Fixed bug with deleting files on upgrade one extra time

--- a/project/jni/application/gemrb/AndroidAppSettings.cfg
+++ b/project/jni/application/gemrb/AndroidAppSettings.cfg
@@ -14,6 +14,10 @@ SwVideoMode=y
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=y
 CompatibilityHacks=n
+CompatibilityHacksStaticInit=n
+CompatibilityHacksTextInputEmulatesHwKeyboard=n
+CompatibilityHacksPreventAudioChopping=n
+CompatibilityHacksAppIgnoresAudioBufferSize=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 ShowMouseCursor=n
@@ -21,7 +25,7 @@ ForceRelativeMouseMode=n
 AppNeedsArrowKeys=n
 AppNeedsTextInput=y
 AppUsesJoystick=n
-AppHandlesJoystickSensitivity=n
+AppUsesAccelerometer=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="LCTRL c NO_REMAP NO_REMAP e"
@@ -32,9 +36,11 @@ StartupMenuButtonTimeout=2000
 HiddenMenuOptions=''
 FirstStartMenuOptions=''
 MultiABI=y
+AppMinimumRAM=0
 AppVersionCode=0701
 AppVersionName="0.7.0.1"
 ResetSdlConfigForThisVersion=y
+DeleteFilesOnUpgrade="%"
 CompiledLibraries="sdl_mixer sdl_ttf ogg vorbis openal png python"
 CustomBuildScript=n
 AppCflags='-fexceptions -finline-functions -O3 -DSTATIC_LINK=Yes -DHAVE_SNPRINTF'
@@ -42,3 +48,7 @@ AppLdflags=''
 AppSubdirsBuild='gemrb/gemrb/*'
 AppCmdline='GemRB'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
+MinimumScreenSize=m
+AdmobPublisherId=n
+AdmobTestDeviceId=
+AdmobBannerSize=
