Updated TeeWorlds project

--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -16,14 +16,16 @@ SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
 CompatibilityHacksStaticInit=n
 CompatibilityHacksTextInputEmulatesHwKeyboard=n
+CompatibilityHacksPreventAudioChopping=n
+CompatibilityHacksAppIgnoresAudioBufferSize=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=n
 ShowMouseCursor=n
 ForceRelativeMouseMode=n
-AppNeedsArrowKeys=n
-AppNeedsTextInput=n
+AppNeedsArrowKeys=y
+AppNeedsTextInput=y
 AppUsesJoystick=y
-AppUsesAccelerometer=y
+AppUsesAccelerometer=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP"
@@ -34,6 +36,7 @@ StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
 FirstStartMenuOptions=''
 MultiABI=n
+AppMinimumRAM=0
 AppVersionCode=06108
 AppVersionName="0.6.1.08"
 ResetSdlConfigForThisVersion=y
