Fixed minor bug with dependencies in build.sh

--- a/project/jni/application/test-advertisements/AndroidAppSettings.cfg
+++ b/project/jni/application/test-advertisements/AndroidAppSettings.cfg
@@ -16,6 +16,8 @@ SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
 CompatibilityHacksStaticInit=n
 CompatibilityHacksTextInputEmulatesHwKeyboard=n
+CompatibilityHacksPreventAudioChopping=n
+CompatibilityHacksAppIgnoresAudioBufferSize=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 ShowMouseCursor=n
@@ -34,6 +36,7 @@ StartupMenuButtonTimeout=500
 HiddenMenuOptions='OptionalDownloadConfig'
 FirstStartMenuOptions=''
 MultiABI=n
+AppMinimumRAM=0
 AppVersionCode=101
 AppVersionName="1.01"
 ResetSdlConfigForThisVersion=n
