--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -37,10 +37,10 @@ HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
 FirstStartMenuOptions=''
 MultiABI=y
 AppMinimumRAM=300
-AppVersionCode=08816
-AppVersionName="0.8.8.16"
+AppVersionCode=08817
+AppVersionName="0.8.8.17"
 ResetSdlConfigForThisVersion=y
-DeleteFilesOnUpgrade="libsdl-DownloadFinished-10.flag"
+DeleteFilesOnUpgrade="libsdl-DownloadFinished-10.flag .openarena/baseoa/q3config.cfg"
 CompiledLibraries="sdl_mixer sdl_image freetype curl vorbis ogg"
 CustomBuildScript=y
 AppCflags='-O2 -finline-functions'
