Copied old VCMI sources to another project dir, updated them to use static libvcmi

--- a/project/jni/application/vcmi-r2387/AndroidAppSettings.cfg
+++ b/project/jni/application/vcmi-r2387/AndroidAppSettings.cfg
@@ -1,11 +1,11 @@
 # The application settings for Android libSDL port
 AppSettingVersion=17
 LibSdlVersion=1.2
-AppName="OpenTTD"
-AppFullName=org.openttd.sdl
+AppName="VCMI"
+AppFullName=eu.vcmi
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="!Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-1.2.3.zip^!MIDI music support (18 Mb)|timidity.zip|http://sourceforge.net/projects/libsdl-android/files/timidity.zip^!Config file|:.openttd/openttd.cfg:openttd-1.2.3.24.cfg"
+AppDataDownloadUrl="!Data files|data1.zip^!Data files|data2.zip^!Data files|data3.zip^"
 VideoDepthBpp=16
 NeedDepthBuffer=n
 NeedStencilBuffer=n
@@ -13,7 +13,7 @@ NeedGles2=n
 SwVideoMode=y
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
-CompatibilityHacks=n
+CompatibilityHacks=y
 CompatibilityHacksStaticInit=n
 CompatibilityHacksTextInputEmulatesHwKeyboard=n
 CompatibilityHacksPreventAudioChopping=n
@@ -28,25 +28,25 @@ AppUsesJoystick=n
 AppUsesAccelerometer=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="LALT RETURN NO_REMAP NO_REMAP SPACE DELETE"
+RedefinedKeys="LALT RETURN NO_REMAP NO_REMAP E"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINUS 1 2"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig'
 FirstStartMenuOptions=''
-MultiABI=n
-AppMinimumRAM=0
-AppVersionCode=12324
-AppVersionName="1.2.3.24"
+MultiABI=y
+AppMinimumRAM=64
+AppVersionCode=08605
+AppVersionName="0.86.05"
 ResetSdlConfigForThisVersion=y
-DeleteFilesOnUpgrade="%"
-CompiledLibraries="jpeg png freetype timidity lzma lzo2"
+DeleteFilesOnUpgrade="libsdl-DownloadFinished-0.flag libsdl-DownloadFinished-1.flag libsdl-DownloadFinished-2.flag libsdl-DownloadFinished-3.flag libsdl-DownloadFinished-4.flag libsdl-DownloadFinished-5.flag"
+CompiledLibraries="mad sdl_mixer sdl_image sdl_ttf avutil avcore avcodec avformat swscale boost_program_options boost_filesystem boost_iostreams boost_system boost_thread android"
 CustomBuildScript=y
 AppCflags=''
 AppLdflags=''
 AppSubdirsBuild=''
-AppCmdline='openttd'
+AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
 MinimumScreenSize=s
 AdmobPublisherId=n
